--- a/ludotest/package.json
+++ b/ludotest/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "vite-template-solid",
-  "type": "module",
+  "name": "ts-jest-template-solid",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -12,38 +11,38 @@
   },
   "jest": {
     "preset": "solid-jest/preset/browser",
-    "moduleNameMapper": {
-      ".*\\.(css|jpe?g|png|svg)$": "<rootDir>/.empty.js"
-    },
-    "transform": {
-      "\\.[jt]s$": "babel-jest",
-      "\\.module\\.css$": "jest-css-modules-transform"
-    },
-    "testEnvironment": "jsdom"
+    "setupFilesAfterEnv": [
+      "<rootDir>/node_modules/@testing-library/jest-dom/extend-expect"
+    ]
   },
-  "setupFiles": [
-    "node_modules/@testing-library/jest-dom/extend-expect"
-  ],
   "license": "MIT",
   "devDependencies": {
-    "@graphql-tools/jest-transform": "^2.0.0",
-    "@solidjs/testing-library": "^0.8.1",
-    "@talabes/json5-jest": "^2.0.0",
-    "@testing-library/dom": "^9.3.1",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@solidjs/testing-library": "^0.7.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.2",
+    "@types/testing-library__jest-dom": "^5.14.6",
+    "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.5.0",
+    "babel-preset-jest": "^29.5.0",
+    "babel-preset-solid": "^1.7.4",
     "jest": "^29.5.0",
-    "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-file-loader": "^1.0.3",
-    "jest-webworker": "^0.0.1",
+    "jsdom": "^22.1.0",
+    "postcss": "^8.4.24",
+    "regenerator-runtime": "0.13.11",
     "solid-devtools": "^0.27.3",
     "solid-jest": "^0.2.0",
+    "solid-testing-library": "^0.5.1",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
-    "@solidjs/router": "^0.8.2",
+    "@testing-library/user-event": "^14.4.3",
     "solid-js": "^1.7.6"
   }
 }
